lol extemp is actually the exhaust temperature

--- a/Lab5/report.tex
+++ b/Lab5/report.tex
@@ -91,7 +91,7 @@
 \begin{figure}[H]
  \centering
  \includegraphics[width=\textwidth]{extempthrust.png}
- \caption{External temperature and the corresponding thrust}
+ \caption{Exhaust temperature and the corresponding thrust}
  % \label{q6}
 \end{figure}
 
@@ -155,7 +155,7 @@ The values obtained in Table \ref{correlationmatrix} agree
 with the conclusions reached in Question \ref{q1}, with
 the rate having the largest correlation with a positive slope, and the
 ambient temperature having a weak correlation and slightly negative slope.
-Additionally, we see that the external temperature also has a fairly strong
+Additionally, we see that the exhaust temperature also has a fairly strong
 linear relation with the thrust, and its correlation value is both positive and less than
 the rate variable, as predicted in Question \ref{1b}.
 \todo{maybe be more precise}
@@ -326,7 +326,7 @@ $$F_0 = 10.9650813 \sim F_{39-2}^{1}$$
 \todo{state the distribution of the test statistic}
 The p-value is
 $$p= \SI{2.48143e-13}{} $$
-Because the p-value obtained is extremely small, we reject $H_0$. i.e. the data strongly suggests that there is a relationship between the external temperature and the thrust.
+Because the p-value obtained is extremely small, we reject $H_0$. i.e. the data strongly suggests that there is a relationship between the exhaust temperature and the thrust.
 
 \setcounter{subsection}{6}
 \subsection{}
@@ -335,7 +335,7 @@ Because the p-value obtained is extremely small, we reject $H_0$. i.e. the data 
 \begin{figure}[H]
  \centering
  \includegraphics[width=\textwidth]{extempresidual.png}
- \caption{Residual plot for the external temperature variable}
+ \caption{Residual plot for the exhaust temperature variable}
  % \label{q6}
 \end{figure}
 The residuals appear randomly scattered about the horizontal 0 line.
@@ -348,7 +348,7 @@ residuals does seem appropriate.
 \begin{figure}[H]
  \centering
  \includegraphics[width=\textwidth]{normalplot2.png}
- \caption{Normal plot for the external temperature variable}
+ \caption{Normal plot for the exhaust temperature variable}
  % \label{q6}
 \end{figure}
 
