bulk of this is done, just some minor fixes left

--- a/Lab5/report.tex
+++ b/Lab5/report.tex
@@ -92,7 +92,7 @@
  \centering
  \includegraphics[width=\textwidth]{extempthrust.png}
  \caption{Exhaust temperature and the corresponding thrust}
- % \label{q6}
+ \label{extempthrust}
 \end{figure}
 
 \begin{figure}[H]
@@ -272,7 +272,7 @@ Additionally, we observe that the Normal Probability plot below
 very closely represents a straight line, so the normality assumption for the
 residuals does seem appropriate.
 \todo{is it because there is a straight line, or is there a better explanation like the residuals being scattered about 0?}
-\todo{do the assumptions hold?}
+\todo{explain that the other assumptions hold too}
 
 \begin{figure}[H]
  \centering
@@ -343,7 +343,7 @@ Additionally, we observe that the Normal Probability plot below
 very closely represents a straight line, so the normality assumption for the
 residuals does seem appropriate.
 \todo{is it because there is a straight line, or is there a better explanation like the residuals being scattered about 0?}
-\todo{do the assumptions hold?}
+\todo{explain why the other assumptions hold too}
 
 \begin{figure}[H]
  \centering
