--- a/Lab5/report.tex
+++ b/Lab5/report.tex
@@ -141,7 +141,7 @@ since it has a positive slope and the least amount of scatter.
  \caption{Correlation matrix for the variables}
  \label{correlationmatrix}
 \end{table}
-\todo{caption}
+% \todo{caption}
 
 \subsection{}
 % Highest correlation, lowest (note absolute value)? Does this
