xkcd is unnecessary

--- a/Lab5/report.tex
+++ b/Lab5/report.tex
@@ -373,13 +373,13 @@ variation in thrust. It also has a smaller standard error, and a much smaller
 p-value.
 
 
-\newpage
-\thispagestyle{empty}
-\begin{figure}
- \centering
- \includegraphics[width=\textwidth]{correlation.png}
- % \caption{---}
- \label{xkcd}
-\end{figure}
+% \newpage
+% \thispagestyle{empty}
+% \begin{figure}
+%  \centering
+%  \includegraphics[width=\textwidth]{correlation.png}
+%  % \caption{---}
+%  \label{xkcd}
+% \end{figure}
 
 \end{document}
