--- a/Lab5/report.tex
+++ b/Lab5/report.tex
@@ -201,7 +201,7 @@ $$ thrust = -25860.12772 + 1.005348711 \times (rate)$$
 % \todo{should $\epsilon$ be in this equation?}
 
 The following points from the scatterplot in Figure \ref{ratethrust} were visually far
-away from the rest of the data, and are therefore influential on the fitted line:
+away from the rest of the data, and therefore may be influential on the fitted line:
 \begin{itemize}
  \item[] (rate, thrust)
  \item[] (28675, 3368),
@@ -212,7 +212,7 @@ away from the rest of the data, and are therefore influential on the fitted line
 \end{itemize}
 
 The following points on the residual plot had relatively large residuals which were
-visually far away from the rest of the data:
+visually far away from the rest of the data and therefore are probably outliers:
 \begin{itemize}
  \item[] (rate, residual)
  \item[] (28675, 399.7534461),
